--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Pictor 照片集",
+    "title": "Pictor 测试",
     "subtitle": "Take Photo Think Seriously",
     "description": "拿起相机，认真思考",
     "cover": "https://github.com/lfkdsk/picx-images-hosting/raw/master/20230817/IMG_7586.4e91my1ve140.17iz0sa56gik.webp",
