update by pictor.

--- a/config.json
+++ b/config.json
@@ -6,6 +6,6 @@
   "author": "Pictor",
   "slogan_descr": "The moments when I pressed the shutter, the moments are forever.",
   "travel_slogan_descr": "Travel all over the world ~",
-  "main": "https://raw.githubusercontent.com/lfkdsk/pictor-gallery/@main",
-  "thumbnail": "https://raw.githubusercontent.com/lfkdsk/pictor-gallery/@thumbnail"
+  "main": "https://github.com/lfkdsk/pictor-gallery/raw/main",
+  "thumbnail": "https://github.com/lfkdsk/pictor-gallery/raw/thumbnail"
 }
